--- a/app/views/pages/news.liquid
+++ b/app/views/pages/news.liquid
@@ -23,11 +23,11 @@ meta_description: "News page of the website of the Centre for the Franco-russian
     {% editable_model news, hint: 'some text' %}
 
       {% for news in contents.news %}
-        <div class="react-card-box hidden" data-read-more="{{ 'read_more' | translate }}" data-teaser='{{ news.teaser | escape }}' data-id="card_{% increment i %}" data-btn-target="{% path_to news %}" data-image-src="{{ news.featured_image.url | resize: '400x200#' }}" data-card-title="{{ news.title | escape }}">
+        <div class="react-card-box hidden" data-read-more="{{ 'read_more' | translate }}" data-teaser='{{ news.teaser | escape }}' data-btn-target="{% path_to news %}" data-image-src="{{ news.featured_image.url | resize: '400x200#' }}" data-card-title="{{ news.title | escape }}">
         </div>
       {% endfor %}
 
-      <div id="react-box-container-target-element" class="row news" data-read-more="{{ 'read_more' | translate }}">
+      <div id="react-box-container-target-element" class="row news" data-read-more="{{ 'read_more' | translate }}" data-col-class="col-xs-12 col-sm-6 col-md-4" data-clear-fix-classes-for-two-cards="visible-sm" data-clear-fix-classes-for-three-cards="hidden-sm hidden-xs">
       </div>
 
 
