--- a/app/views/snippets/js_footer.liquid
+++ b/app/views/snippets/js_footer.liquid
@@ -5,4 +5,5 @@
 {{ 'react_libraries/react-dom.min.js' | javascript_tag }}
 {{ 'react_components/react_lightbox.js' | javascript_tag }}
 {{ 'react_components/react_card_equalizer.js' | javascript_tag }}
-
+{{ 'react_components/react_news_dispatcher.js' | javascript_tag }}
+{{ 'react_components/react_news_on_index_dispatcher.js' | javascript_tag }}
