added event content type and events index page; still need to create an event read page as well as refactor the news read page

--- a/app/views/pages/layouts/simple.liquid
+++ b/app/views/pages/layouts/simple.liquid
@@ -9,12 +9,14 @@ is_layout: true
 <!-- ------------------------------------------------------------------ -->
 
 <section class="header-section">
-  <div class="fluid-container header-content">
+  <div class="spacer-for-content-header-of-sec-pages">
+    <div class="fluid-container header-content">
 
     {% block header, short_name: true, priority: 1 %}
 
     {% endblock %}
 
+    </div>
   </div>
 </section>
 
