--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -41,7 +41,9 @@ section {
     background-color: grey;
   }
 }
-
+div.spacer-for-content-header-of-sec-pages {
+  margin-top: 50px;
+}
 ////////////////////////////
 // COMMON LOGO CLASSES FOR HEADER AND SIDNAV
 ////////////////////////////
@@ -147,10 +149,8 @@ body {
     }
   }
 }
-
-
 ////////////////////////////
-// Main page header formatting
+// Top site-wide thin header row formatting
 ////////////////////////////
 body {
   header.header {
@@ -335,7 +335,7 @@ body {
 }
 
 ////////////////////////////
-// Header and main content formating
+// Main content formating
 ////////////////////////////
 body {
   ///////////////
@@ -413,22 +413,60 @@ body {
       }
     }
   }
-  //////////////
-  // React Transition Class - NO NOT TOUCH
-  //////////////
+  /////////////////
+  /* events.liquid */
+  /////////////////
+  &.page-events {
+    .event-outer-wrapper {
+      padding-top: 70px;
+      padding-bottom: 70px;
+      border-bottom-style: solid;
+      border-bottom-width: 1px;
+      border-bottom-color: #ddd;
+      &:hover {
+        background-color: #ddd;
+      }
+      img.my-media-size {
+        width: 200px;
+        height: 100px;
+      }
+      .my-event-media-body {
+        padding-left: 55px;
+        .my-event-media-heading {
+          text-transform: uppercase;
+          .my-event-category {
+            font-color: #ddd;
+          }
+        }
+      }
+      .my-event-btn-container {
+        margin-top: 10px;
+        @media (min-width: 768px) {
+          margin-top: 55px;
+          text-align: right;
+        }
+        .my-event-btn {
+          @media (max-width: 768px) {
+            display: block;
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  ///////////////////////////////////////////
+  // React Transition Class - NO NOT TOUCH //
+  ///////////////////////////////////////////
   .react-news-container-enter {
     opacity: 0.01;
   }
-
   .react-news-container-enter.react-news-container-enter-active {
     opacity: 1;
     transition: opacity 300ms ease-in;
   }
-
   .react-news-container-leave {
     opacity: 1;
   }
-
   .react-news-container-leave.react-news-container-leave-active {
     opacity: 0.01;
     transition: opacity 300ms ease-in;
@@ -437,23 +475,32 @@ body {
     opacity: 0.01;
     max-height: 0px;
   }
-
   .react-news-container-appear.react-news-container-appear-active {
     opacity: 1;
     max-height: 5000px;
     overflow: hidden;
     transition: opacity 3000ms ease-in, max-height 4000ms ease-in;
   }
+  ///////////////
+  /* Footer */
+  ///////////////
   @keyframes for-footer {
       from {opacity: 0;}
       to {opacity: 1;}
   }
-
-  /* The element to apply the animation to */
   .footer {
-      opacity: 1;
-      animation-name: for-footer;
-      animation-duration: 4s;
+    opacity: 1;
+    animation-name: for-footer;
+    animation-duration: 4s;
+    /********/
+    margin-top: 70px;
+    p {
+      padding: 10px;
+      text-align: center;
+    }
+    a, a:visited {
+      color: #333;
+    }
   }
   /* news/content_type_template.liquid */
   article.news {
@@ -500,16 +547,3 @@ body {
     font-weight: bold;
   }
 }
-
-/* the footer */
-.footer {
-  margin-top: 70px;
-  p {
-    padding: 10px;
-    text-align: center;
-  }
-  a, a:visited {
-    color: #333;
-  }
-}
-
