--- a/app/views/snippets/side_nav.liquid
+++ b/app/views/snippets/side_nav.liquid
@@ -1,5 +1,5 @@
 <div class="side-nav">
-  <div class="side-nav-wrapper side-nav-close">
+  <div class="side-nav-wrapper side-nav-wrapper-close">
     <div class="side-nav-scrollable">
       <a class="side-nav-logo" href="{% path_to home %}">
         <div class="icon-logo icon-lg-logo visible-lg-block">
