--- a/app/views/snippets/header_side_nav_stuffs.liquid
+++ b/app/views/snippets/header_side_nav_stuffs.liquid
@@ -9,4 +9,4 @@
 
 {% include 'main_header', icon_logo_url: icon_logo_url, large_resize: large_resize, small_resize: small_resize, logo_alt: logo_alt  %}
 
-{% include 'nav', parent_slug: parent_slug %}
+{% include 'nav' %}
