works approximately in the Wagon

--- a/app/views/pages/about.liquid
+++ b/app/views/pages/about.liquid
@@ -7,7 +7,7 @@ meta_description: "About page for Art des Nations - General text and listing of 
 
 editable_elements:
     'content/header/featured_photo/legend': "Dali and Lijiang"
-    'content/main/about_body':
+    'content/main/general_description_of_art_des_nations':
       "
         <p>
           Thank you for visiting the page of the Centre for the Franco-russian and Franco-chinese friendships. Our centre aims at making the world a place dominated by a triad of super-powers that will enslave all the other people of the world to its common cultural ideology.
@@ -16,7 +16,9 @@ editable_elements:
           We truly hope that you like our project and you will join us dominating the world.
         </p>
       "
-    'content/main/first_category_heading': "Contributors"
+    'content/main/first_category_heading': "Board Members"
+    'content/main/second_category_heading': "Executives"
+    'content/main/third_category_heading': "Contributors"
 ---
 {% extends 'layouts/simple' %}
 
@@ -48,9 +50,9 @@ editable_elements:
 
   {% block content/main %}
 
-    {% capture about_body %}
+    {% capture general_description_of_art_des_nations %}
       {% comment %} Editable text for the description (about_body) {% endcomment %}
-      {% editable_text "about_body", rows: 20, hint: "Please enter here any text describing your organization." %}
+      {% editable_text "general_description_of_art_des_nations", rows: 20, hint: "Please enter here any text describing your organization." %}
         ''
       {% endeditable_text %}
     {% endcapture %}
@@ -61,11 +63,25 @@ editable_elements:
       {% endeditable_text %}
     {% endcapture %}
 
+    {% capture second_category_heading %}
+      {% editable_text 'second_category_heading', rows: 1, hint: "Please enter here the name of the first category of persons that will be displayed on the about page" %}
+        ''
+      {% endeditable_text %}
+    {% endcapture %}
+
+    {% capture third_category_heading %}
+      {% editable_text 'third_category_heading', rows: 1, hint: "Please enter here the name of the first category of persons that will be displayed on the about page" %}
+        ''
+      {% endeditable_text %}
+    {% endcapture %}
+
     <div class="row">
       <div class="col-sm-12">
-        {{ about_body }}
+        {{ general_description_of_art_des_nations }}
       </div>
     </div>
+
+      <!-- Board Members section -->
 
     <div class="row">
       <div class="col-sm-12">
@@ -76,10 +92,8 @@ editable_elements:
     </div>
 
     {% editable_model members, hint: 'some text' %}
-
-    {{ contents.news }}
-
-{% comment %}      {% for member in contents.members %}
+      {% with_scope category: 'Board Member' %}
+      {% for member in contents.site_members %}
         <div class="row">
           <div class="col-sm-12">
 
@@ -96,8 +110,8 @@ editable_elements:
                         </div>
                         <div class="media-body my-member-media-body">
                           <h2 class="media-heading my-member-media-heading">{{ member.full_name }}</h2>
-                          <div class="my-member-description">
-                           {{ member.description }}
+                          <div class="my-member-bio">
+                           {{ member.bio }}
                           </div>
                         </div>
                       </div>
@@ -117,7 +131,111 @@ editable_elements:
           </div>
         </div>
       {% endfor %}
-{% endcomment %}
+      {% endwith_scope %}
+    <!--{% endeditable_model%}-->
+
+      <!-- Executives section -->
+    <div class="row">
+      <div class="col-sm-12">
+        <h1>
+          {{ second_category_heading }}
+        </h1>
+      </div>
+    </div>
+
+    <!--{% editable_model members, hint: 'some text' %}-->
+      {% with_scope category: 'Executive' %}
+      {% for member in contents.site_members %}
+        <div class="row">
+          <div class="col-sm-12">
+
+            <div class="member-outer-wrapper">
+              <div class="member-inner-wrapper">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-xs-12 col-sm-9 md-10">
+                      <div class="media">
+                        <div class="media-left">
+                          <a href="{% path_to member %}">
+                            <img class="media-object my-media-size" src="{{ member.member_index_photo.url | default: 'http://loremflickr.com/100/100' | resize: '200x200#' }}" alt="{{ member.full_name }}">
+                          </a>
+                        </div>
+                        <div class="media-body my-member-media-body">
+                          <h2 class="media-heading my-member-media-heading">{{ member.full_name }}</h2>
+                          <div class="my-member-bio">
+                           {{ member.bio }}
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 md-2">
+                      <p class="btn-container my-event-btn-container">
+                        <a href="{% path_to member %}" class="btn btn-lg black-square-btn my-member-btn">
+                          {{ 'read_more' | translate }}
+                        </a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      {% endfor %}
+      {% endwith_scope %}
+    <!--{% endeditable_model%}-->
+
+      <!-- Executives section -->
+    <div class="row">
+      <div class="col-sm-12">
+        <h1>
+          {{ third_category_heading }}
+        </h1>
+      </div>
+    </div>
+
+    <!--{% editable_model members, hint: 'some text' %}-->
+      {% with_scope category: 'Contributor' %}
+      {% for member in contents.site_members %}
+        <div class="row">
+          <div class="col-sm-12">
+
+            <div class="member-outer-wrapper">
+              <div class="member-inner-wrapper">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-xs-12 col-sm-9 md-10">
+                      <div class="media">
+                        <div class="media-left">
+                          <a href="{% path_to member %}">
+                            <img class="media-object my-media-size" src="{{ member.member_index_photo.url | default: 'http://loremflickr.com/100/100' | resize: '200x200#' }}" alt="{{ member.full_name }}">
+                          </a>
+                        </div>
+                        <div class="media-body my-member-media-body">
+                          <h2 class="media-heading my-member-media-heading">{{ member.full_name }}</h2>
+                          <div class="my-member-bio">
+                           {{ member.bio }}
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 md-2">
+                      <p class="btn-container my-event-btn-container">
+                        <a href="{% path_to member %}" class="btn btn-lg black-square-btn my-member-btn">
+                          {{ 'read_more' | translate }}
+                        </a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      {% endfor %}
+      {% endwith_scope %}
     {% endeditable_model%}
 
   {% endblock %}
