--- a/app/views/pages/news/content_type_template.liquid
+++ b/app/views/pages/news/content_type_template.liquid
@@ -12,24 +12,34 @@ content_type: news
 
     <article class="news">
 
-      <h1>{{ news.title }}</h1>
+      <div class="row">
+        <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
 
-      <h3 class="posted-at">
-        {% assign posted_at_format = 'posted_at_format' | translate %}
-        {{ news.posted_at | localized_date: posted_at_format }}
-      </h3>
+          <h1>{{ news.title }}</h1>
 
-      {% if news.tags %}
-        <p class="tags">
-          <i class="glyphicon glyphicon-tags"></i>
-          {% for tag in news.tags %}
-            <span class="label label-primary">{{ tag | escape }}</span>
-          {% endfor %}
-        </p>
-      {% endif %}
+          <h3 class="posted-at">
+            {% assign posted_at_format = 'posted_at_format' | translate %}
+            {{ news.posted_at | localized_date: posted_at_format }}
+          </h3>
 
-      <div class="news-body">
-        {{ news.body }}
+          {% if news.tags %}
+            <p class="tags">
+              <i class="glyphicon glyphicon-tags"></i>
+              {% for tag in news.tags %}
+                <span class="label label-primary">{{ tag | escape }}</span>
+              {% endfor %}
+            </p>
+          {% endif %}
+
+          <div class="news-body">
+            {{ news.body }}
+          </div>
+
+          <div class="news-author">
+
+          </div>
+
+        </div>
       </div>
 
       {% if news.photos.size > 0 %}
