--- a/app/views/pages/about.liquid
+++ b/app/views/pages/about.liquid
@@ -92,7 +92,8 @@ editable_elements:
     </div>
 
     {% editable_model members, hint: 'some text' %}
-      {% for member in contents.sitemembers %}
+      {% with_scope group: 'Board Member' %}
+      {% for member in contents.site_members %}
         <div class="row">
           <div class="col-sm-12">
 
@@ -113,10 +114,12 @@ editable_elements:
                            {{ member.bio }}
                           </div>
                           <div>
+                          {% with_scope %} <!-- reset with_scope -->
                             {{ member.news.size }}
                             {% for item in member.news %}
                               {{ item.title }}
                             {% endfor %}
+                          {% endwith_scope %}
                           </div>
                         </div>
                       </div>
@@ -136,6 +139,7 @@ editable_elements:
           </div>
         </div>
       {% endfor %}
+      {% endwith_scope %}
     <!--{% endeditable_model%}-->
 
       <!-- Executives section -->
@@ -149,7 +153,7 @@ editable_elements:
 
     <!--{% editable_model members, hint: 'some text' %}-->
       {% with_scope group: 'Executive' %}
-      {% for member in contents.sitemembers %}
+      {% for member in contents.site_members %}
         <div class="row">
           <div class="col-sm-12">
 
@@ -201,7 +205,7 @@ editable_elements:
 
     <!--{% editable_model members, hint: 'some text' %}-->
       {% with_scope group: 'Contributor' %}
-      {% for member in contents.sitemembers %}
+      {% for member in contents.site_members %}
         <div class="row">
           <div class="col-sm-12">
 
