--- a/app/views/pages/news/content_type_template.liquid
+++ b/app/views/pages/news/content_type_template.liquid
@@ -36,7 +36,7 @@ content_type: news
           </div>
 
           <div class="news-author">
-
+            {{ news.site_member.full_name }}
           </div>
 
         </div>
